# Lathon

./: LICENSE  README.md  main.py  pyproject.toml
lathon/: __init__.py  environment.py  tables.py
src/lathon/: __init__.py  environment.py  packages.py  tables.py
tests/: tabular_test.py
